sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:13: error: not found: value int
    ecart=int(ecart/1.3)
          ^